--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
-   font-family:Arial, Helvetica, sans-serif
+   font-family: 'Pacifico', cursive;
 }
 
 header {
@@ -15,6 +15,8 @@ header {
    color: white;
 }
 
+
+/* Banner Section */
 .banner{
    display: flex;
    justify-content: space-between;
@@ -35,7 +37,7 @@ header {
 }
 
 .banner button:hover{
-   background-color: #95d048;
+   background-color: #a2e44c;
    cursor:pointer;
 }
 
@@ -43,6 +45,7 @@ header {
    margin-left: 2%;
 }
 
+/* Navbar Section */
 nav{
    display: flex;
    justify-content: space-between;
@@ -69,4 +72,57 @@ nav li {
    border: 2px solid white;
    text-decoration: none;
    padding: 15px 35px;
+   transition: all 250ms ease-in-out 0s;
+}
+
+#Super_Hungry:hover{
+   background-color: white;
+   color: #82b440;
+}
+
+/* Slogan */
+.slogan{
+   margin: 10% 2% 5%;
+   font-size: 30px;;
+}
+
+.slogan > p {
+   margin-top: 10px;
+   color: #82b440;
+}
+
+header input{
+   margin-left: 2%;
+}
+
+header .header-search{
+   display: flex;
+   height: 60px;
+}
+
+header input{
+   background-color: transparent;  
+   border: 3px solid white;
+   border-radius: 30px 0px 0px 30px;
+   width: 26%;
+   padding-left: 2%;
+   font-size: large;
+   border-right: 1.5px solid white;
+   font-size: 20px;
+}
+
+header select{
+   font-size: 20px;
+   padding-left: 2%;
+   border: 3px solid white;
+   background-color: transparent;  
+   color: white;
+   border-right: 1.5px solid white;
+   width: 15%;
+}
+
+.header-search button{
+   border-radius: 0px 50% 50% 0px;
+   background-color: white;
+   border: 3px solid white;
 }
