--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
-   font-family: 'Pacifico', cursive;
+   font-family: 'Cherry Swash', cursive;
 }
 
 header {
@@ -49,6 +49,7 @@ header {
 nav{
    display: flex;
    justify-content: space-between;
+   align-items: center;
    margin-top: 45px;
 }
 
@@ -59,11 +60,18 @@ nav{
 nav ul{
    display: flex;
    list-style: none;
+   align-items: center;
 }
 
-nav li {
-   margin: 0px 25px;
-   font-weight: bold;
+nav a {
+   margin: 0px 20px;
+   font-size: larger;
+   color: white;
+   text-decoration: none;  
+}
+
+nav a:hover{
+   border-bottom: 2px dotted white;
 }
 
 #Super_Hungry{
@@ -73,6 +81,8 @@ nav li {
    text-decoration: none;
    padding: 15px 35px;
    transition: all 250ms ease-in-out 0s;
+   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   font-size: larger;
 }
 
 #Super_Hungry:hover{
@@ -125,4 +135,51 @@ header select{
    border-radius: 0px 50% 50% 0px;
    background-color: white;
    border: 3px solid white;
+}
+
+/* Section Restaurants */
+.restaurants-title{
+   text-align: center;
+   font-size: larger;
+   color: grey;
+}
+
+.restaurants-categories > h2{
+   margin-top: 20vh;
+   font-size: 40px;
+   color: rgb(65, 66, 79);
+   margin-bottom: 5vh;
+}
+
+.restaurants{
+   margin-top: 100px;
+   display: flex;
+   flex-wrap: wrap;
+   height: 300px;
+   justify-content: space-around;
+   width: 100%;
+}
+
+.restaurants p {
+   margin: 30px auto;
+   text-align: center;
+   font-size: 30px;
+   color: #82b440;
+}
+
+.restaurants div{
+   width: 30%;
+   height: 100%;
+}
+
+.resto{
+   width: 100%;
+   height: 100%;
+   background-color: red;
+   border-radius: 20px;
+}
+
+.resto:hover{
+   transform: scale(1.2);
+   transition: all .5s;
 }
