--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,10 +213,12 @@ header select{
 }
 
 .app-section h2{
+   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 48px;
    margin-bottom: 10px;
 }
 .link-para{
+   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 20px;
    margin-bottom: 10px;
 }
@@ -249,6 +251,7 @@ header select{
 }
 
 #email-label, #phone-label{
+   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif  ;
    font-size: 24px;
 }
 
