--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
    font-family: 'Cherry Swash', cursive;
 }
 
-header {
+#landing-header {
    background-image: url(/public/welcome.jpg);
    height: 130vh;
    background-repeat: no-repeat;
@@ -101,16 +101,16 @@ nav a:hover{
    color: #82b440;
 }
 
-header input{
+#landing-header input{
    margin-left: 2%;
 }
 
-header .header-search{
+#landing-header .header-search{
    display: flex;
    height: 60px;
 }
 
-header input{
+#landing-header input{
    background-color: transparent;  
    border: 3px solid white;
    border-radius: 30px 0px 0px 30px;
@@ -121,7 +121,7 @@ header input{
    font-size: 20px;
 }
 
-header select{
+#landing-header select{
    font-size: 20px;
    padding-left: 2%;
    border: 3px solid white;
