--- a/styles/styles.css
+++ b/styles/styles.css
@@ -349,7 +349,8 @@ nav ul{
 
 .login-row, .signup-row{
    display: flex;
-   justify-content: center;
+   align-items: center;
+   flex-direction: column;
    background-color: rgba(95, 158, 160, 0.349);
 }
 
@@ -357,8 +358,8 @@ nav ul{
    padding: 15px 0px;
 }
 
-#login-username-input, #login-email-input, #login-password-input,
-#signup-username-input, #signup-email-input, #signup-password-input
+.login-username-input, .login-email-input, .login-password-input,
+.signup-username-input, .signup-email-input, .signup-password-input
 {
    height: 40px;
    width: 300px;
@@ -366,14 +367,14 @@ nav ul{
    margin-top: 10px;
 }
 
-#login-username-input:hover, #login-email-input:hover, #login-password-input:hover,
-#signup-username-input:hover, #signup-email-input:hover, #signup-password-input:hover
+.login-username-input:hover, .login-email-input:hover, .login-password-input:hover,
+.signup-username-input:hover, .signup-email-input:hover, .signup-password-input:hover
 {
    border-color: cadetblue;
    border-width: 3px;
 }
 
-#login-create-account, #signup-create-account{
+.login-account, .signup-create-account{
    width:150px;
    background-color:cadetblue;
    color: azure;
@@ -384,7 +385,7 @@ nav ul{
    padding: 5px 0px;
 }
 
-#login-create-account:hover, #signup-create-account:hover{
+.login-account:hover, .signup-create-account:hover{
    background-color:rgba(95, 158, 160, 0.878);
 }
 
