--- a/styles/styles.css
+++ b/styles/styles.css
@@ -300,6 +300,9 @@ nav a:hover{
 nav ul{
    display: none;
 }
+.banner button{
+   width: fit-content;
+}
 
 /*Restaurants categories section*/
 .restaurants{
