--- a/styles/category.css
+++ b/styles/category.css
@@ -72,9 +72,18 @@
   display: flex;
   flex-wrap: wrap;
   height: 300px;
-  justify-content: space-around;
+  justify-content: space-evenly;
   width: 90%;
   margin: 70px auto 150px auto;
+}
+
+.restaurants h1{
+  font-size: 36px;
+  text-align: center;
+}
+
+.restaurants p{
+  font-size: 24px;
 }
 /* Section Restaurants
 .restaurants-title{
