--- a/styles/styles.css
+++ b/styles/styles.css
@@ -562,21 +562,30 @@ nav ul{
 }
 
 .rating-review{
-   margin-top: 20px;
+   margin-top: 30px;
    margin-left: 20px;
 }
 
 .rating-review h3{
+   font-size: 30px;
+}
+
+.rating-review #review_section h3{
    font-size: 40px;
+   text-align: center;
+   font-weight: bolder;
+   margin: 60px;
 }
 
 .rating-review p{
    font-size: 30px;
 }
 
+.rating-review .rating h3{
+   margin: 40px auto;
+}
+
 .rating{
-   display: flex;
-   justify-content: space-evenly;
    border-bottom: solid #95d048; 
 }
 
