--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,11 +26,26 @@
    border-bottom: 2px solid black;
 }
 
+.partner{
+   display: flex;
+   align-items: center;
+}
+
+#sef-icon{
+   width: 50px;
+   height: 50px;
+   margin-right: 20px;
+}
+
+.banner div{
+   display: flex;
+}
+
 .banner button{
-   margin-right: 2%;
+   margin-right: 20px;
    background-color: #82b440;
    height: 6vh;
-   width: 9%;
+   width: 100px;
    border-radius: 8px;
    color: white;
    box-shadow: 0px 0px 2px #95d048;
@@ -582,6 +597,7 @@ nav ul{
    border-radius: 20px;
    padding: 30px;
    font-size: 25px;
+   width: 80%;
 }
 .rating-review h3{
    font-size: 30px;
