--- a/styles/category.css
+++ b/styles/category.css
@@ -15,6 +15,18 @@
   border-bottom: 2px solid black;
 }
 
+.restos{
+  text-align: center;
+  height: 50px;
+  color: white;
+  font-size: 30px;
+  
+  background-color: red;
+  margin: 10px auto;
+  font-size: 20px;
+  border-radius: 10px;
+}
+
 .banner button{
   margin-right: 2%;
   background-color: #82b440;
